KubeYaml/yaml/insurance v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-api-v2
  namespace: nm
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  insurance-api
      version: new
  template:
    metadata:
      labels:
        app:  insurance-api
        version: new
    spec:
      containers:
      - name: insurance-api
        image: emersso.azurecr.io/insurancev2:11.0.1   
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: topsecretregistryconnection
