KubeYaml/yaml/benefits-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: benefits-api-service
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80      
  selector:
    app:  benefits-api
    version: 11.0.0
