KubeYaml/yaml/benefits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benefits-api
  namespace: nm
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  benefits-api
  template:
    metadata:
      labels:
        app:  benefits-api
    spec:
      containers:
      - name: benefits-api
        image: emersso.azurecr.io/benefits:11.0.5
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 90
          periodSeconds: 10
      imagePullSecrets:
      - name: topsecretregistryconnection
---
kind: Service
apiVersion: v1
metadata:
  name: benefits-api-service
  namespace: nm
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80      
  selector:
    app:  benefits-api
