KubeYaml/yaml/healthcare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcare-api
  namespace: nm
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  healthcare-api
      version: 11.0.0
  template:
    metadata:
      labels:
        app:  healthcare-api
        version: 11.0.0
    spec:
      containers:
      - name: healthcare-api
        image: emersso.azurecr.io/healthcare:11.0.1
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: topsecretregistryconnection
---
kind: Service
apiVersion: v1
metadata:
  name: healthcare-api-service
  namespace: nm
spec:
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
  selector:
    app:  healthcare-api
    version: 11.0.0
