KubeYaml/yaml/hospital.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-api
  namespace: nm
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  hospital-api
      version: 11.0.1
  template:
    metadata:
      labels:
        app:  hospital-api
        version: 11.0.1
    spec:
      containers:
      - name: hospital-api
        image: emersso.azurecr.io/hospital:11.0.1
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 90
          periodSeconds: 10
      imagePullSecrets:
      - name: topsecretregistryconnection
---
kind: Service
apiVersion: v1
metadata:
  name: hospital-api-service
  namespace: nm
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80      
  selector:
    app:  hospital-api
    version: 11.0.1
